--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
-@import "antd/dist/reset.css";
+@import 'antd/dist/reset.css';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-otp {
+  display: flex !important;
+  width: 100% !important;
+  justify-content: center;
+}
+
+.custom-otp-input {
+  width: 62px;
+  height: 97px;
+  font-size: 34px;
+}
